# langgraph-stream

./: .dockerignore  .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  Makefile  QUICKSTART.md  QUICK_CLEANUP_REFERENCE.md  README.md  SHARED_WORKSPACE_CLEANUP.md  WORKSPACE_CLEANUP_GUIDE.md  app.py  claude.md  client.html  config.py  db.py  docker-compose.yml  ecs-task-definition.json  models.py  pyproject.toml  requirements.txt  server.py  utils.py
.claude/: settings.local.json
.github/: AUTOMATION_GUIDE.md
.github/workflows/: pr-cleanup.yml  pr-deploy.yml  prod-deploy.yml
docs/: API_DOCUMENTATION.md  AUTH_STRATEGY.md  FRONTEND_INTEGRATION_GUIDE.md  TERRAFORM_SETUP.md
infra/: README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/bootstrap/: README.md  create-iam-user.sh  iam-user.tf  test-credentials.sh  variables.tf
infra/environments/pr-template/: main.tf  outputs.tf  variables.tf
infra/environments/prod/: main.tf  outputs.tf  variables.tf
infra/environments/shared/: ALTERNATIVE_FIX.md  DNS_IMPORT_GUIDE.md  import-dns-records.sh  main.tf  outputs.tf  variables.tf
infra/modules/ecs-service/: main.tf  outputs.tf  variables.tf
infra/modules/networking/: main.tf  outputs.tf  variables.tf
infra/modules/shared/: main.tf  outputs.tf  variables.tf
routes/: __init__.py  health.py  scans.py  socketio_handler.py  static.py  websocket.py
scripts/: cleanup-all-aws-resources.sh  cleanup-aws-resources.sh  cleanup-pr-workspace.sh  cleanup-shared-workspace.sh  force-delete-shared-workspace.sh  list-shared-resources.sh
services/: __init__.py  cache.py  llm.py  scan_processor.py  screenshot.py  search.py
supabase/: config.toml
supabase/migrations/: 20251023153610_create_websites_and_scans_tables.sql
workflow/: __init__.py  graph.py
workflow/nodes/: __init__.py  analyzer.py  chatbot.py  seo_analyzer.py
workflow/prompts/: __init__.py  analysis.py  seo.py
