[project]
name = "langgraph-websocket-test"
version = "0.1.0"
description = "Simple LangGraph websocket streaming test with Meta Llama"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "openai>=1.54.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
