[project]
name = "langgraph-websocket-test"
version = "0.1.0"
description = "AI-powered website screenshot analyzer using LangGraph, Meta Llama Vision, and Steel.dev"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "openai>=1.54.0",
    "steel-sdk>=0.13.0",
    "httpx>=0.28.0",
    "google-search-results>=2.4.2",
    "boto3>=1.40.57",
    "supabase>=2.10.0",
    "clerk-backend-api>=1.5.0",
    "pyjwt>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
only-include = ["server.py", "client.html"]
